--- a/PROJETOFINAL_SalesWeb/appsettings.json
+++ b/PROJETOFINAL_SalesWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PROJETOFINAL_SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=PROJETOFINAL_SalesWebContext-e95171be-04b0-4a91-b25a-4fc0d18268c3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
